# sparrowhawk-web

./: .gitignore  .gitmodules  README.md  netlify.toml  vercel.json
.github/workflows/: cf_deploy.yaml
docs/: book.toml
docs/src/: SUMMARY.md  alignment.md  assembly.md  introduction.md  mapping.md  taxonomicid.md
rust/deacon-bridge/: Cargo.toml
rust/deacon-bridge/src/: lib.rs
rust/orphos-bridge/: Cargo.toml
rust/orphos-bridge/.cargo/: config.toml
rust/orphos-bridge/src/: .lib.rs.swp  fastx_wasm.rs  lib.rs
www/: .eslintignore  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vue.config.js
www/public/: index.html  inverted.ski  inverted_k_17_ss_10.ski  inverted_simples_k_17_ss_10.ski
www/src/: App.vue  archiveUtils.ts  main.ts  shims-vue.d.ts  types.ts  utils.ts
www/src/assets/: app.css
www/src/components/: AlignmentHelpCollapsible.vue  AssemblyHelpCollapsible.vue  AssemblyPage.vue  DownloadButton.vue  DownloadButtonHostDepletion.vue  DownloadButtonOrphos.vue  DropZone.vue  DropZoneOrphos.vue  DropZoneSka.vue  DropZoneSketchlib.vue  KmerHistogram.vue  LoadingSpinner.vue  MappingAlignmentPage.vue  MappingHelpCollapsible.vue  ResultsDisplayAlignment.vue  ResultsDisplayAssembly.vue  ResultsDisplayMapping.vue  ResultsDisplayOrphos.vue  TaxonomicIDHelpCollapsible.vue  TaxonomicIDPage.vue  functions.ts
www/src/lib/: utils.ts
www/src/store/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
www/src/volt/: VoltButton.vue
www/src/workers/: Assembler.js  Assembler.ts  Assembler.worker.js  Assembler.worker.ts  Caller.js  (+14 more)
(+24 files in other folders)
