[package]
name = "deacon-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
deacon = { git = "https://github.com/bede/deacon", branch = "wasm1", default-features = false, features = ["scalar", "gz"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.77", features = ["console"] }
flate2 = { version = "1.1", features = ["zlib-rs"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
memchr = "2.7"

[lib]
crate-type = ["cdylib", "rlib"]
