[package]
name = "orphos-bridge"
version = "0.1.0"
edition = "2021"
description = "blabla"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orphos-core = "0.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-file-reader = {version = "1"}
web-sys = {version = "0.3.77", features = ["Blob", "console", "Document", "Element", "HtmlCanvasElement", "HtmlImageElement", "Response", "Window"]}
serde = { version = "1.0.219", features = ["derive"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
json = {version = "0.12.4"}
#seq_io = {version = "0.3.2"}
seq_io = {version = "0.3.4"}
#flate2 = {version = "1.0" }
flate2 = {version = "1.1.5" }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
